--- a/.drone.yml
+++ b/.drone.yml
@@ -6,9 +6,9 @@ steps:
   image: redis
   commands:
   - sleep 5
-  - redis-cli -h '.redis' ping
-  - redis-cli -h '.redis' set FOO bar
-  - redis-cli -h '.redis' get FOO
+  - redis-cli -h 'redis' ping
+  - redis-cli -h 'redis' set FOO bar
+  - redis-cli -h 'redis' get FOO
 
 services:
 - name: redis
